correct scrollbar not going to the bottom of the content

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,6 @@
 
 .scrollable-page {
 
-  @apply overflow-y-auto;
+  @apply overflow-y-scroll;
 
 }
